--- a/themes/academimal/layouts/research/section.html
+++ b/themes/academimal/layouts/research/section.html
@@ -36,7 +36,15 @@ You should also edit side bar
     <p>
         <h4 style="margin:20px 0px 5px;">{{ with .pdflink }}<a href="{{ . }}" target="blank">{{ end }}{{ .title }}{{ with .pdflink }}</a>{{ end }}</h4>
         
-        {{ with .coauthors }}<p style="margin:5px 0px 5px 0px;">(with {{ . }})</p>{{ end }}
+        <!--{{ with .coauthors }}<p style="margin:5px 0px 5px 0px;">(with {{ . }})</p>{ end }</-->
+        {{ with .coauthors }}
+            <p style="margin:5px 0px 5px 0px;">(with 
+            {{ range $i, $coauthor := . }}
+            {{ if $i }}, {{ end }}
+            <a href="{{ $coauthor.link }}" target="_blank">{{ $coauthor.name }}</a>
+            {{ end }})
+            </p>
+            {{ end }}
 
         {{ with .editors }}<p style="margin:5px 0px 5px 0px;">(Eds. {{ . }})</p>{{ end }}
 
