--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -17,6 +17,7 @@
 
 {{ end }}
 
+<p class="sidebar"><a class="sidebar" href="https://www.dropbox.com/s/z7dihlwhe2qp8ko/CV_EmreOral_Apr23.pdf?dl=0">Bio and CV</a></p>
 
 <p class="sidebar">
 	<img src="{{ "/icons/twitter-white.png" | relURL }}" class="octicons">
