--- a/themes/academimal/layouts/research/section.html
+++ b/themes/academimal/layouts/research/section.html
@@ -36,7 +36,7 @@ You should also edit side bar
     <p>
         <h4 style="margin:20px 0px 5px;">{{ with .pdflink }}<a href="{{ . }}" target="blank">{{ end }}{{ .title }}{{ with .pdflink }}</a>{{ end }}</h4>
         
-        {{ with .coauthors }}<p style="margin:5px 0px 5px 0px;">(with {{ . }})</p>{ end }
+        {{ with .coauthors }}<p style="margin:5px 0px 5px 0px;">(with {{ . }})</p>{{ end }}
 
         {{ with .editors }}<p style="margin:5px 0px 5px 0px;">(Eds. {{ . }})</p>{{ end }}
 
