--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -360,7 +360,7 @@ img {
 header {
   float: left;
   position: fixed;
-  background: #608e7d;
+  background: rgb(157, 191, 158);
   top: 0px;
   left: 0px;
   bottom: 0px;
