--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -236,9 +236,9 @@
   background-color: #f8f8f8; }
 
 body {
-  background-color: #fff;
+  background-color: #000000;
   margin: 0;
-  font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 14px/1.5 "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #5e5e5e;
   font-weight: 400; }
 
