--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -236,9 +236,9 @@
   background-color: #f8f8f8; }
 
 body {
-  background-color: rgb(208, 214, 181);
+  background-color: #fff;
   margin: 0;
-  font: 14px/1.5 "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #5e5e5e;
   font-weight: 400; }
 
@@ -360,7 +360,7 @@ img {
 header {
   float: left;
   position: fixed;
-  background: rgb(157, 191, 158);
+  background: rgb(208, 214, 181);
   top: 0px;
   left: 0px;
   bottom: 0px;
