--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -322,7 +322,7 @@ a:hover small {
   margin: 0 auto; }
 
 blockquote {
-  border-left: 1px solid #e5e5e5;
+  border-left: 1px solid rgb(0, 0, 0);
   margin: 0;
   padding: 0 0 0 20px;
   font-style: italic; }
