--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -272,7 +272,7 @@ h1, h2, h3 {
   line-height: 1.1; }
 
 h1 {
-  color: #fff;
+  color: #000000;
   font-size: 28px; }
 
 h2 {
@@ -322,7 +322,7 @@ a:hover small {
   margin: 0 auto; }
 
 blockquote {
-  border-left: 1px solid rgb(0, 0, 0);
+  border-left: 1px solid #ffffff;
   margin: 0;
   padding: 0 0 0 20px;
   font-style: italic; }
