--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,34 +1,23 @@
-<h1 class="sidebar"><a class="sidebar" href="{{ "/" | relURL }}">{{ .Site.Title }}</a></h1>
+<h1 class="sidebar"><a class="sidebar" href="#home">{{ .Site.Title }}</a></h1>
 <h1 style="font-size:18px; font-style:italic;">{{ .Site.Params.title }} <br/>
 {{ .Site.Params.institution }}</h1>
 <hr/>
 
-{{ $.Scratch.Set "currentPageTitle" .Title }}
+<!-- Static Links -->
+<p class="sidebar"><a class="sidebar" href="#research">Research</a></p>
 
-{{ range .Site.Menus.main }}
-<p class="sidebar"><a class="sidebar" href="{{ .URL | relURL }}">{{- .Name -}}</a></p>
+<!-- Link to external PDF (remains unchanged) -->
+<p class="sidebar"><a class="sidebar" href="https://www.dropbox.com/s/z7dihlwhe2qp8ko/CV_EmreOral.pdf?dl=0">CV</a></p>
 
-	{{ if and (eq "Research" ($.Scratch.Get "currentPageTitle")) (eq "Research" .Title) }}
-<!--	<p class="sidebar" style="margin-left:2vw;"><a class="sidebar" href="{{ "research/#WorkingPapers" | relURL }}">Working Papers</a></p> -->
-<!--	<p class="sidebar" style="margin-left:2vw;"><a class="sidebar" href="{{ "research/#Publications" | relURL }}">Publications</a></p> -->
-<!--    <p class="sidebar" style="margin-left:2vw;"><a class="sidebar" href="{{ "research/#PolicyPapers" | relURL }}">Book Chapters & Policy Papers</a></p>  -->
-	<p class="sidebar" style="margin-left:2vw;"><a class="sidebar" href="{{ "research/#WorksInProgress" | relURL }}">Works in Progress</a></p> 
-	{{end}}
-
-{{ end }}
-
-<p class="sidebar"><a class="sidebar" href="https://www.dropbox.com/s/z7dihlwhe2qp8ko/CV_EmreOral.pdf?dl=0">Bio and CV</a></p>
-
+<!-- Twitter Link (remains unchanged) -->
 <p class="sidebar">
-	<img src="{{ "/icons/twitter-white.png" | relURL }}" class="octicons">
-<a class="sidebar" href="https://twitter.com/{{ .Site.Params.Twitter }}" target="_blank">
-@{{ .Site.Params.Twitter }}
-</a></p>
+    <img src="{{ "/icons/twitter-white.png" | relURL }}" class="octicons">
+    <a class="sidebar" href="https://twitter.com/{{ .Site.Params.Twitter }}" target="_blank">
+    @{{ .Site.Params.Twitter }}
+    </a>
+</p>
 
+<!-- Site Logo (remains unchanged) -->
 {{ with .Site.Params.logo }}
-{{ if (eq "Homepage" ($.Scratch.Get "currentPageTitle")) }}
-<img src="{{ . | relURL }}" alt="Logo" style="padding-bottom: 3em;"/>
-{{ else }}
-<img class="nothomepage" src="{{ . | relURL }}" alt="Logo" style="padding-bottom: 3em;"/>
-{{ end }}
+    <img src="{{ . | relURL }}" alt="Logo" style="padding-bottom: 3em;"/>
 {{ end }}
