--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -4,7 +4,7 @@
 <hr/>
 
 <!-- Static Links -->
-<p class="sidebar"><a class="sidebar" href="#research">Research</a></p>
+<p class="sidebar"><a class="sidebar" href="e#research">Research</a></p>
 
 <!-- Link to external PDF (remains unchanged) -->
 <p class="sidebar"><a class="sidebar" href="https://www.dropbox.com/s/z7dihlwhe2qp8ko/CV_EmreOral.pdf?dl=0">CV</a></p>
