--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -20,7 +20,7 @@
 {{ end }}
 
 <!-- External PDF Link -->
-<p class="sidebar"><a class="sidebar" href="https://www.dropbox.com/s/z7dihlwhe2qp8ko/CV_EmreOral.pdf?dl=0">CV</a></p>
+<p class="sidebar"><a class="sidebar" href="https://www.dropbox.com/scl/fi/bs3hna8qn46dxwtm0t2ci/CV_EmreOral.pdf?rlkey=8wxds1px5u7fpwdkzo11yssv7&dl=0">CV</a></p>
 
 <!-- Twitter Link -->
 <p class="sidebar">
