--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -236,7 +236,7 @@
   background-color: #f8f8f8; }
 
 body {
-  background-color: #dcdc5b;
+  background-color: #fdfdfd;
   margin: 0;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #5e5e5e;
