--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -272,7 +272,7 @@ h1, h2, h3 {
   line-height: 1.1; }
 
 h1 {
-  color: #ffffff;
+  color: #000000;
   font-size: 28px; }
 
 h2 {
@@ -282,7 +282,7 @@ h3, h4, h5, h6 {
   color: #494949; }
 
 a.sidebar {
-  color: #ffffff;
+  color: #000000;
   text-decoration: none; 
   margin-top: -50px;
   word-break: break-word; }
@@ -292,7 +292,7 @@ a.sidebar:hover, a.sidebar:focus {
 
 a.sidebar small {
   font-size: 11px;
-  color: #ffffff;
+  color: #000000;
   display: inline-block; }
 
 a.sidebar:hover small {
@@ -360,7 +360,7 @@ img {
 header {
   float: left;
   position: fixed;
-  background: #608e7d;
+  background: #BBCFC8;
   top: 0px;
   left: 0px;
   bottom: 0px;
