--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -236,14 +236,14 @@
   background-color: #f8f8f8; }
 
 body {
-  background-color: #fdfdfd;
+  background-color:#f3f9fc;
   margin: 0;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #082132;
   font-weight: 400; }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #131c19;
+  color: #023047;
   margin: 0 0 20px; }
 
 p, ul, ol, table, pre, dl {
@@ -288,7 +288,7 @@ a.sidebar {
   word-break: break-word; }
 
 a.sidebar:hover, a.sidebar:focus {
-  color: #046; }
+  color: #219ebc; }
 
 a.sidebar small {
   font-size: 11px;
@@ -296,7 +296,7 @@ a.sidebar small {
   display: inline-block; }
 
 a.sidebar:hover small {
-  color: #046; }
+  color: #219ebc; }
 
 p.sidebar {
   margin-top: -10px;}
@@ -306,7 +306,7 @@ a {
   text-decoration: none; }
 
 a:hover, a:focus {
-  color: #046; }
+  color: #219ebc; }
 
 a small {
   font-size: 11px;
@@ -315,7 +315,7 @@ a small {
   display: block; }
 
 a:hover small {
-  color: #777; }
+  color: #219ebc; }
 
 .wrapper {
   width: 1060px;
@@ -360,7 +360,7 @@ img {
 header {
   float: left;
   position: fixed;
-  background: #608e7d;
+  background: #8ecae6;
   top: 0px;
   left: 0px;
   bottom: 0px;
@@ -400,7 +400,7 @@ header ul a {
   height: 34px; }
 
 header ul a:hover, header ul a:focus {
-  color: #675C5C;
+  color: #219ebc;
   font-weight: bold; }
 
 header ul a:active {
