--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -236,14 +236,14 @@
   background-color: #f8f8f8; }
 
 body {
-  background-color:#f3f9fc;
+  background-color:#f3f6f7;
   margin: 0;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #082132;
   font-weight: 400; }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #023047;
+  color: #E7ECEE;
   margin: 0 0 20px; }
 
 p, ul, ol, table, pre, dl {
@@ -276,10 +276,10 @@ h1 {
   font-size: 28px; }
 
 h2 {
-  color: #393939; }
+  color: #101618; }
 
 h3, h4, h5, h6 {
-  color: #494949; }
+  color: #182225; }
 
 a.sidebar {
   color: #082132;
@@ -360,7 +360,7 @@ img {
 header {
   float: left;
   position: fixed;
-  background: #8ecae6;
+  background: #3a4b55;
   top: 0px;
   left: 0px;
   bottom: 0px;
