--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -282,21 +282,21 @@ h3, h4, h5, h6 {
   color: #182225; }
 
 a.sidebar {
-  color: #082132;
+  color: #f3f6f7;
   text-decoration: none; 
   margin-top: -50px;
   word-break: break-word; }
 
 a.sidebar:hover, a.sidebar:focus {
-  color: #219ebc; }
+  color: #046; }
 
 a.sidebar small {
   font-size: 11px;
-  color: #0b293f;
+  color: #f3f6f7;
   display: inline-block; }
 
 a.sidebar:hover small {
-  color: #219ebc; }
+  color: #046; }
 
 p.sidebar {
   margin-top: -10px;}
@@ -306,7 +306,7 @@ a {
   text-decoration: none; }
 
 a:hover, a:focus {
-  color: #219ebc; }
+  color: #046; }
 
 a small {
   font-size: 11px;
@@ -315,7 +315,7 @@ a small {
   display: block; }
 
 a:hover small {
-  color: #219ebc; }
+  color: #046; }
 
 .wrapper {
   width: 1060px;
@@ -400,7 +400,7 @@ header ul a {
   height: 34px; }
 
 header ul a:hover, header ul a:focus {
-  color: #219ebc;
+  color: #046;
   font-weight: bold; }
 
 header ul a:active {
