--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -417,7 +417,7 @@ header ul li + li + li {
 header ul a strong {
   font-size: 14px;
   display: block;
-  color: #0d314b; }
+  color: #F3F6F7; }
 
 section {
   position: static;
