--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -58,7 +58,7 @@
   background-color: #ffdddd; }
 
 .highlight .ge {
-  color: #000000;
+  color: #f3f6f7;
   font-style: italic; }
 
 .highlight .gr {
