--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -393,7 +393,7 @@ header li:last-child a {
 header ul a {
   line-height: 1;
   font-size: 11px;
-  color: #676767;
+  color: #f3f6f7;
   display: block;
   text-align: center;
   padding-top: 6px;
