--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -1,4 +1,4 @@
-@font-face {
+/*@font-face { 
   font-family: 'Noto Sans';
   font-weight: 400;
   font-style: normal;
@@ -22,6 +22,21 @@
   font-style: italic;
   src: url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.eot");
   src: url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.eot?#iefix") format("embedded-opentype"), local("Noto Sans Bold Italic"), local("Noto-Sans-700italic"), url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.woff2") format("woff2"), url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.woff") format("woff"), url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.ttf") format("truetype"), url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.svg#NotoSans") format("svg"); }
+  */
+  @font-face {
+    font-family: 'Lora';
+    font-weight: 400;
+    font-style: normal;
+    src: url("../fonts/Lora/Lora-VariableFont_wght");
+    src: url("../fonts/Lora/Lora-VariableFont_wght") format("ttf")}
+  
+    @font-face {
+      font-family: 'Lora';
+      font-weight: 400;
+      font-style: italic;
+      src: url("../fonts/Lora/Lora-Italic-VariableFont_wght.ttf");
+      src: url("../fonts/Lora/Lora-Italic-VariableFont_wght.ttf") format("ttf")}
+
 .highlight table td {
   padding: 5px; }
 
@@ -235,10 +250,18 @@
 .highlight {
   background-color: #f8f8f8; }
 
+  /*
 body {
   background-color:#f3f6f7;
   margin: 0;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #082132;
+  font-weight: 400; }
+*/
+body {
+  background-color:#f3f6f7;
+  margin: 0;
+  font: 14px/1.5 'Lora', serif;
   color: #082132;
   font-weight: 400; }
 
