--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -21,6 +21,8 @@
 
 <!-- External PDF Link -->
 <p class="sidebar"><a class="sidebar" href="/pdf/CV_EmreOral.pdf">CV</a></p>
+
+<p class="sidebar"><a class="sidebar" href="https://scholar.google.com/citations?user=Vy-eyx8AAAAJ&hl=en">Google Scholar page</a> </p>
 <!--
 <p class="sidebar"><a class="sidebar" href="https://www.dropbox.com/scl/fi/bs3hna8qn46dxwtm0t2ci/CV_EmreOral.pdf?rlkey=8wxds1px5u7fpwdkzo11yssv7&dl=0">CV</a></p>
 -->
@@ -31,6 +33,8 @@
     @{{ .Site.Params.Twitter }}
     </a>
 </p>
+
+
 
 <!-- Site Logo -->
 {{ with .Site.Params.logo }}
