--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -259,7 +259,7 @@ body {
   font-weight: 400; }
 */
 body {
-  background-color:#fdfdfd;
+  background-color:#ffffff;
   margin: 0;
   font: 14px/1.5 'Lora', serif;
   color: #082132;
