--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -266,7 +266,8 @@ body {
   font-weight: 400; }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #E7ECEE;
+  /*color: #E7ECEE;*/
+  color: #fefefe;
   margin: 0 0 20px; }
 
 p, ul, ol, table, pre, dl {
