--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -1,4 +1,4 @@
-/*@font-face { 
+@font-face { 
   font-family: 'Noto Sans';
   font-weight: 400;
   font-style: normal;
@@ -22,7 +22,7 @@
   font-style: italic;
   src: url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.eot");
   src: url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.eot?#iefix") format("embedded-opentype"), local("Noto Sans Bold Italic"), local("Noto-Sans-700italic"), url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.woff2") format("woff2"), url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.woff") format("woff"), url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.ttf") format("truetype"), url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.svg#NotoSans") format("svg"); }
-  */
+  /*
   @font-face {
     font-family: 'Lora';
     font-weight: 400;
@@ -36,7 +36,7 @@
       font-style: italic;
       src: url("../fonts/Lora/Lora-Italic-VariableFont_wght.ttf");
       src: url("../fonts/Lora/Lora-Italic-VariableFont_wght.ttf") format("ttf")}
-
+*/
 .highlight table td {
   padding: 5px; }
 
