--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -384,7 +384,7 @@ img {
 header {
   float: left;
   position: fixed;
-  background: #3a4b55;
+  background: #608e7d;
   top: 0px;
   left: 0px;
   bottom: 0px;
