--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -33,7 +33,10 @@
     </a>
 </p>
 
-<p class="sidebar"><a class="sidebar" href="https://scholar.google.com/citations?user=Vy-eyx8AAAAJ&hl=en">Google Scholar</a> </p>
+<p class="sidebar">
+    <img src="{{ "/icons/scholar.png" | relURL }}" class="octicons">
+    <a class="sidebar" href="https://scholar.google.com/citations?user=Vy-eyx8AAAAJ&hl=en">Google Scholar</a> 
+</p>
 
 
 
