--- a/themes/academimal/static/css/style.css
+++ b/themes/academimal/static/css/style.css
@@ -260,7 +260,7 @@ body {
   font-weight: 400; }
 */
 body {
-  background-color:#fdf5f5;
+  background-color:#fffdfd;
   margin: 0;
   font: 14px/1.5 'Lora', serif;
   color: #082132;
